--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inventory",
-  "version": "0.0.1-alpha",
+  "version": "0.0.2-alpha",
   "private": true,
   "author": "klikkn",
   "description": "inventory",
@@ -10,18 +10,31 @@
     "react-start": "BROWSER=none react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
-    "react-eject": "react-scripts eject",
-    "start": "NODE_ENV=development electron .",
-    "start-prod": "electron .",
-    "dist": "rm -rf dist && electron-builder -mw"
+    "electron-start": "NODE_ENV=development electron .",
+    "electron-build": "webpack --config webpack.electron.config.js",
+    "electron-dist": "rm -rf dist && electron-builder -mw",
+    "electron-test": "jest -c=jest.electron.config.js",
+    "electron-test-w": "jest -c=jest.electron.config.js --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "jsonwebtoken": "^8.5.0",
+    "lokijs": "^1.5.6",
+    "nanoid": "^2.0.1"
+  },
   "devDependencies": {
+    "@jest-runner/electron": "^1.1.1",
     "electron": "^4.0.8",
     "electron-builder": "^20.38.5",
+    "formik": "^1.5.1",
+    "jest": "23.6.0",
+    "material-ui": "^0.20.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,9 +48,10 @@
   "build": {
     "extends": null,
     "appId": "inventory",
+    "asar": true,
     "files": [
       "build/**/*",
-      "electron/index.js",
+      "electron/**/*",
       "package.json"
     ],
     "dmg": {},
