Added ui for auth

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "devDependencies": {
     "@jest-runner/electron": "^1.1.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "electron": "^4.0.8",
     "electron-builder": "^20.38.5",
     "formik": "^1.5.1",
     "jest": "23.6.0",
-    "material-ui": "^0.20.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
