--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-builder": "^20.38.5",
     "formik": "^1.5.1",
     "jest": "23.6.0",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
