--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inventory",
-  "version": "0.0.2-alpha",
+  "version": "0.0.3-alpha",
   "private": true,
   "author": "klikkn",
   "description": "inventory",
@@ -10,34 +10,55 @@
     "react-start": "BROWSER=none react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
+    "react-lint": "npx eslint src",
     "electron-start": "NODE_ENV=development electron .",
-    "electron-build": "webpack --config webpack.electron.config.js",
     "electron-dist": "rm -rf dist && electron-builder -mw",
     "electron-test": "jest -c=jest.electron.config.js",
-    "electron-test-w": "jest -c=jest.electron.config.js --watch"
+    "electron-test-w": "jest -c=jest.electron.config.js --watch",
+    "electron-lint": "npx eslint electron",
+    "test": "npm run electron-test && npm run react-test",
+    "lint": "npm run electron-lint && npm run react-lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "export CI=true && npm run lint",
+      "pre-push": "export CI=true && npm run lint && npm run test"
+    }
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "jsonwebtoken": "^8.5.0",
-    "lokijs": "^1.5.6",
-    "nanoid": "^2.0.1"
+    "nanoid": "^2.0.1",
+    "pouchdb-adapter-memory": "^7.0.0",
+    "rxdb": "^8.0.5",
+    "rxjs": "^6.4.0"
   },
   "devDependencies": {
     "@jest-runner/electron": "^1.1.1",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "babel-eslint": "9.0.0",
     "electron": "^4.0.8",
     "electron-builder": "^20.38.5",
+    "eslint": "5.12.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "formik": "^1.5.1",
+    "husky": "^1.3.1",
     "jest": "23.6.0",
     "node-sass": "^4.11.0",
+    "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2"
   },
   "eslintConfig": {
     "extends": "react-app"
