--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "formik": "^1.5.1",
     "husky": "^1.3.1",
     "jest": "23.6.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
+    "normalizr": "^3.3.0",
     "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
@@ -58,7 +60,8 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "reselect": "^4.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -74,6 +77,7 @@
     "appId": "inventory",
     "asar": true,
     "files": [
+      "common/**/*",
       "build/**/*",
       "electron/**/*",
       "package.json"
