--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "formik": "^1.5.1",
     "husky": "^1.3.1",
     "jest": "23.6.0",
+    "material-table": "^1.32.0",
     "node-sass": "^4.11.0",
     "normalizr": "^3.3.0",
     "prettier": "^1.16.4",
