--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inventory",
-  "version": "0.0.3-alpha",
+  "version": "0.0.1-beta",
   "private": true,
   "author": "klikkn",
   "description": "inventory",
@@ -57,9 +57,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.5",
+    "react-intl": "^2.8.0",
+    "react-intl-redux": "^2.1.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-to-print": "^2.1.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
